feat: Change countdown to count-up timer

--- a/example/css/style.css
+++ b/example/css/style.css
@@ -48,7 +48,7 @@ body.light-theme .buttons .button:hover {
   box-sizing: border-box;
 }
 
-.example .flipdown {
+.example .fliptimer {
   margin: auto;
 }
 
